WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56005
[EFL] Fix build break when CROSS_PLATFORM_CONTEXT_MENUS is disabled.
https://bugs.webkit.org/show_bug.cgi?id=56005
Summary
[EFL] Fix build break when CROSS_PLATFORM_CONTEXT_MENUS is disabled.
Gyuyoung Kim
Reported
2011-03-09 02:38:46 PST
There is a build break when CROSS_PLATFORM_CONTEXT_MENUS is disabled.
Attachments
Patch
(2.24 KB, patch)
2011-03-09 02:41 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2011-03-09 02:41:04 PST
Created
attachment 85150
[details]
Patch
WebKit Commit Bot
Comment 2
2011-03-10 16:56:18 PST
Comment on
attachment 85150
[details]
Patch Clearing flags on attachment: 85150 Committed
r80794
: <
http://trac.webkit.org/changeset/80794
>
WebKit Commit Bot
Comment 3
2011-03-10 16:56:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug