2011-03-10  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Unreviewed build fix.

        [EFL] Fix build break when CROSS_PLATFORM_CONTEXT_MENUS is disabled.
        https://bugs.webkit.org/show_bug.cgi?id=56005

        There are build breaks when CROSS_PLATFORM_CONTEXT_MENUS is disabled.

        * platform/efl/ContextMenuEfl.cpp:
        (WebCore::ContextMenu::ContextMenu):
        * platform/efl/ContextMenuItemEfl.cpp:

Canonical link: https://commits.webkit.org/70680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80794 268f45cc-cd09-0410-ab3c-d52691b4dbfc